--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,8 +17,8 @@ android {
         applicationId "com.developer.ivan.easymadbus"
         minSdkVersion 23
         targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
+        versionCode getCustomVersionCode(referenceVersionCode)
+        versionName getCustomVersionName(referenceVersionName)
         testInstrumentationRunner "com.developer.ivan.easymadbus.framework.UIRunner"
     }
     buildTypes {
@@ -38,6 +38,16 @@ android {
 
     kotlinOptions {
         jvmTarget = "1.8"
+    }
+
+    applicationVariants.all { variant ->
+        def outputName = "app-${variant.buildType.name}_easy_mad_bus_VC${defaultConfig.versionCode}_${defaultConfig.versionName}_.apk"
+
+        variant.outputs.all { output->
+            outputFileName = outputName
+
+        }
+
     }
 
 
