--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -17,5 +17,9 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - name: Build with Gradle
-      run: ./gradlew build
+    - name: Unit testing
+      run: bash ./gradlew test --stacktrace
+    - name: Android Apk CI
+      uses: yuanjinsongquyi/action_android_build@v1
+      with:
+        APP_NAME : example
