--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -18,8 +18,9 @@ jobs:
       with:
         java-version: 1.8
     - name: Unit testing
-      run: bash ./gradlew test --stacktrace
-    - name: Android Apk CI
-      uses: yuanjinsongquyi/action_android_build@v1
+      run: bash ./gradlew build
+    - name: Get Apk Version
+      uses: JantHsueh/get-apk-info-action@1.0
       with:
-        APP_NAME : example
+        # apk path
+        apkPath: app/build/outputs/apk/release/app-release.apk
