--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -7,7 +7,7 @@ on:
     branches: [ develop ]
 
 jobs:
-  build:
+  test:
 
     runs-on: ubuntu-latest
 
@@ -18,9 +18,21 @@ jobs:
       with:
         java-version: 1.8
     - name: Unit testing
-      run: bash ./gradlew build
-    - name: Get Apk Version
-      uses: JantHsueh/get-apk-info-action@1.0
-      with:
-        # apk path
-        apkPath: app/build/outputs/apk/release/app-release.apk
+      run: bash ./gradlew test --stacktrace
+  apk:
+    name: Generate APK
+    runs-on: ubuntu-18.04
+
+    steps:
+      - uses: actions/checkout@v1
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Build debug APK
+        run: bash ./gradlew assembleDebug --stacktrace
+      - name: Upload APK
+        uses: actions/upload-artifact@v1
+        with:
+          name: app
+          path: app/build/outputs/apk/debug/app-debug.apk
