--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Build debug APK
         run: bash ./gradlew assembleDebug --stacktrace
       - name: Output List
-        run: bash ls -l app/build/outputs/apk/debug/*
+        run: ls -l app/build/outputs/apk/debug/*
       - name: Upload APK
         uses: actions/upload-artifact@v1
         with:
