--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Output List
         run: ls -l app/build/outputs/apk/debug/*
       - name: Upload APK
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v2
         with:
-          name: app
+          name: apk
           path: app/build/outputs/apk/debug/*
